testing/tests/ui/filter-recursion.stderr
error: unclosed expression, missing "}}"
       failed to parse template source at row 1, column 0 near:
       "{{ s|a|a|a|a|a|a|a|A|a|a|a|a|a|a|a|a|a|a"...
 --> tests/ui/filter-recursion.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
